# sdf_jax

./: .gitignore  LICENSE  README.md  geometric_regularization.ipynb  hash_encoding.ipynb  hash_encoding.py  implicit.ipynb  pyproject.toml  requirements.txt  sdf.ipynb  sdf_flax.ipynb  sdf_jax.py  sdf_treex.ipynb
docs/: index.html  style.css
experiments/: asymptotic_sdf.ipynb  benchmark_dense_supervision.py  benchmark_pointclouds.py  geometric_regularization.ipynb  geometric_regularization_3d.ipynb  hash_encoding.ipynb  hash_encoding_3d.ipynb  implicit_displacement.ipynb  models.py  sdf_treex.ipynb  trimesh_plotting.ipynb
sdf_jax/: discretize.py  examples.py  hash_encoding.py  util.py
