[tool.poetry]
name = "neuralsdf_jax"
version = "0.1.0"
description = "Experiments constructing Neural Signed Distance Functions in JAX"
authors = ["Niklas Schmitz <niklas.f.schmitz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8, <3.11"
jax = "^0.3.10"
jaxlib = "^0.3.10"
treex = "^0.6.10"
optax = "^0.1.2"
numpy = "^1.22.4"
tqdm = "^4.64.0"
scikit-image = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipykernel = "^6.13.0"
ipympl = "^0.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
